<resources>
    <string name="app_name">BMAS</string>

    <string name="bmas">Biometric Attendance System</string>

    <string name="title_activity_registration">Registration</string>
    <string name="name">Employee name</string>
    <string name="empid">Employee ID</string>
    <string name="department">Department</string>
    <string name="building">Building</string>
    <string name="company_name">Company</string>
    <string name="country">Country</string>
    <string name="phone_number">Phone number</string>
    <string name="register">Register</string>

    <string name="landing">Attendance System</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="attendance">Send Attendance</string>

    <string name="fingerprint_description">Confirm fingerprint to continue</string>
    <string name="fingerprint_hint">Touch sensor</string>
    <string name="description_fingerprint_icon">Fingerprint icon</string>
    <string name="fingerprint_not_recognized">Fingerprint not recognized. Try again</string>
    <string name="fingerprint_success">Fingerprint recognized</string>
    <string name="password">Password</string>
    <string name="password_description">Enter your store password to continue</string>
    <string name="new_fingerprint_enrolled_description">A new fingerprint was added to this device, so your password is required.</string>
    <string name="use_fingerprint_in_future">Use fingerprint in the future</string>
    <string name="use_fingerprint_to_authenticate_title">Use fingerprint to authenticate</string>
    <string name="use_fingerprint_to_authenticate_key">use_fingerprint_to_authenticate_key</string>
    <string name="cancel">Cancel</string>
    <string name="use_password">Use password</string>
    <string name="ok">OK</string>
    <string name="sign_in">Sign in</string>
    <string name="login_button">Log In</string>
    <string name="logout_button">Log Out</string>
    <string name="preference_file_key">logindata</string>
</resources>
