<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_landing"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.am.LandingActivity">

    <LinearLayout
        android:id="@+id/mainlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1.0">

        <LinearLayout
            android:id="@+id/firstLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="7">

            <TextView
                android:layout_marginTop="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empid"
                android:textSize="@dimen/registration_font_size_1"/>

            <TextView
                android:layout_marginTop="30dp"
                android:text="Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/emp_name"
                android:textSize="@dimen/registration_font_size_1"/>

            <TextView
                android:layout_marginTop="30dp"
                android:text="@string/department"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/emp_dept"
                android:textSize="@dimen/registration_font_size_1"/>

            <TextView
                android:layout_marginTop="30dp"
                android:text="@string/building"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/emp_building"
                android:textSize="@dimen/registration_font_size_1"/>

            <TextView
                android:layout_marginTop="30dp"
                android:text="@string/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/date"
                android:textSize="@dimen/registration_font_size_1"/>

            <TextView
                android:layout_marginTop="30dp"
                android:text="@string/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/time"
                android:textSize="@dimen/registration_font_size_1"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/thirdLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="4">

            <TextView
                android:id="@+id/emp_id_tv"
                android:layout_marginTop="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empid"
                android:textSize="@dimen/registration_font_size_1"/>

            <TextView
                android:layout_marginTop="30dp"
                android:text="@string/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/emp_name_tv"
                android:textSize="@dimen/registration_font_size_1"/>
`
            <TextView
                android:layout_marginTop="30dp"
                android:text="@string/department"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/emp_dept_tv"
                android:textSize="@dimen/registration_font_size_1"/>

            <EditText
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="enter building number"
                android:ems="10"
                android:id="@+id/emp_buld_edt" />

            <TextView
                android:layout_marginTop="20dp"
                android:text="@string/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/date_tv"
                android:textSize="@dimen/registration_font_size_1"/>

            <TextView
                android:layout_marginTop="30dp"
                android:text="@string/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/time_tv"
                android:textSize="@dimen/registration_font_size_1"/>


        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/mainlayout"
        android:layout_marginTop="40dp"
        android:text="@string/attendance"
        android:visibility="gone"/>
</RelativeLayout>
