<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:id="@+id/mainlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1.0">

        <LinearLayout
            android:id="@+id/firstLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="7">

            <TextView
                android:layout_marginTop="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empid"
                android:textSize="@dimen/registration_font_size"/>

            <TextView
                android:layout_marginTop="30dp"
                android:text="@string/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/emp_name"
                android:textSize="@dimen/registration_font_size"/>

            <TextView
                android:layout_marginTop="30dp"
                android:text="@string/department"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/emp_dept"
                android:textSize="@dimen/registration_font_size"/>

            <TextView
                android:layout_marginTop="30dp"
                android:text="@string/building"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/emp_building"
                android:textSize="@dimen/registration_font_size"/>

            <TextView
                android:layout_marginTop="30dp"
                android:text="@string/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/emp_phn"
                android:textSize="@dimen/registration_font_size"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/thirdLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="4">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="enter ID"
                android:ems="10"
                android:id="@+id/emp_id_edt" />

            <EditText
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="enter name"
                android:ems="10"
                android:id="@+id/emp_name_edt" />

            <EditText
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="enter department"
                android:ems="10"
                android:id="@+id/emp_dept_edt" />

            <EditText
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="enter building number"
                android:ems="10"
                android:id="@+id/emp_buld_edt" />

            <EditText
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="enter phone number"
                android:ems="10"
                android:id="@+id/emp_phnnum_edt" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_marginTop="40dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainlayout"
        android:text="@string/register"
        android:layout_centerHorizontal="true"
        android:id="@+id/register_button"/>
</RelativeLayout>